--- a/foot.html
+++ b/foot.html
@@ -1,7 +1,11 @@
 <div class="foot">
 	<div class="row">
 		<div class="col-md-6 col-sm-12">
-			<p class="foot_text alead text-center">Technology of <span style="color:#FFc0c0">love</span> by </p>
+			<p class="foot_text alead text-center">
+				<span class="lng lng_es">Technology of <span style="color:#FFc0c0">love</span> by </span>
+				<span class="lng lng_ca">Technology of <span style="color:#FFc0c0">love</span> by </span>
+				<span class="lng lng_en">Technology of <span style="color:#FFc0c0">love</span> by </span>
+			</p>
 		</div>
 		<div class="col-md-6 col-sm-12">
 			<!--<p class="foot_text alead text-center">Amb el suport de l'Ajuntament de Barcelona</p>-->
@@ -19,7 +23,11 @@
 			</a>
 		</div>		
 		<div class="col-md-6 col-sm-12 col_logo aalign-self-center">
-			<p class="foot_text small text-center">Amb el suport de l'Ajuntament de Barcelona</p>
+			<p class="foot_text small text-center">
+				<span class="lng lng_es">Con el soporte del Ayuntamiento de Barcelona</span>
+				<span class="lng lng_ca">Amb el suport de l'Ajuntament de Barcelona</span>
+				<span class="lng lng_en">With the support of the Ajuntament of Barcelona</span>				
+			</p>
 			<a href="https://emprenedoria.barcelonactiva.cat" target="_new">
 				<img class="foot_logo logo_bcn" src="img/logos/bcn_activa.png" alt="Bcn Activa Logo"/>
 			</a>
