--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <meta name="author" content="SokoTech">
   <meta name="keywords" content="steam,education,educación,fablab,events,educational,educacional,programs,programas">  
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/favicon.png" type="image/png">
+  <link rel="shortcut icon" href="img/favicon.ico" type="image/ico">
  
   	<meta name="twitter:card" value="summary">
 	<meta property="og:title" content="MESH" />
@@ -35,8 +35,7 @@
   <link href="https://fonts.googleapis.com/css?family=Raleway:800" rel="stylesheet">
   
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link href="css/dsi.css?6" rel="stylesheet">
-
+  <link href="css/dsi.css?11" rel="stylesheet">
 
   <!--<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>-->
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous"></script>
@@ -44,34 +43,58 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
   <!--<script src="./js/bootstrap.min.js"></script>-->
-  <script src="js/dsi.js?1"></script>
+  <script src="js/dsi.js?6"></script>
 
 </head>
 
 <body id="home">
     <div include-HTML="nav.html"></div>
    
-   <section class="home-hero">
-	  <div class="container-fluid hero-container home-bg">
-		   <object id="mesh-hero-bg-graphic" type="image/svg+xml" data-svg="img/mesh_bg.svg"></object> 
-			<div id="mesh-hero-title" class="fluid">
-		      <h1 id="amesh-hero-title" class="afluid">DSIPLAY</h1>
-		      <h2 id="mesh-hero-subtitle" class="afluid">Cicle d'experiències d'Innovació Social Digital a Barcelona</h2>
-			</div>      
+   <section class="home_hero">
+		<h2 class="home_hero_text">
+		     	<span class="lng lng_es">
+		     		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et malesuada velit.
+ 				</span>
+		      <span class="lng lng_ca">
+		      	Sed et libero dui. Nunc ut pretium arcu. Donec eget commodo tellus. Integer posuere ante vel.
+	 			</span>
+		      <span class="lng lng_en">
+					Suspendisse vitae posuere risus, non ultrices purus. Proin sit amet convallis ligula. Ut et metus 
+	 				sollicitudin ligula vestibulum gravida.		      
+		      </span>
+		</h2>
+		<div class="home_hero_logo">
+			<img src="img/dsi_logo.png"/>
+		   <!--<object id="mesh-hero-bg-graphic" type="image/svg+xml" data-svg="img/mesh_bg.svg"></object>--> 
 	   </div>  
    </section>
    <section id="events" class="container">
 		<div class="intro">
- 			<h1><small>DSIPLAY</small></h1>
- 			<p class="lead ahidden">
- 				El programa MESH ( <b>M</b>akers <b>E</b>ducation <b>S</b>ocial <b>H</b>ack) es una iniciativa de SokoTech dirigida a 
- 				<b>formadores y formadoras que trabajan con jóvenes en programas para la inclusión social</b>. 
- 				Persigue poner en marcha una experiencia escalable a bibliotecas, ateneos, centros cívicos, 
- 				escuelas y otros equipamientos públicos o privados. Consiste en un programa formativo online 
- 				y de acceso universal basado en la filosofía Maker y las herramientas éticas de código abierto.
-				A partir de la fabricación digital y el prototipado rápido busca generar entornos de aprendizaje 
-				emancipadores para jóvenes. Cada una de las siguientes cápsulas de conocimiento ha sido desarrollada 
-				por referentes en la educación Maker y la inclusión social.
+ 			<h1>
+ 				<span class="lng lng_es">Lorem ipsum dolor sit amet</span>
+ 				<span class="lng lng_en">Sed et libero dui</span>
+ 				<span class="lng lng_ca">In nec vestibulum metus</span>
+ 			</h1>
+ 			<p>
+ 				<span class="lng lng_es">
+	 				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et malesuada velit, quis 
+ 					aliquet nunc. Proin quis risus aliquet, lacinia sapien non, lobortis eros. Vivamus ornare libero 
+ 					quis est commodo lobortis. Nullam eget volutpat eros. Proin efficitur semper felis sit amet luctus. 
+ 					Donec sit amet lorem elementum, semper augue sed, dictum mi. 
+ 				</span>
+ 					<span class="lng lng_ca">
+	 				Sed et libero dui. Nunc ut pretium arcu. Donec eget commodo tellus. Sed dictum turpis sed metus 
+	 				porttitor imperdiet. Integer posuere ante vel magna faucibus, vitae rhoncus neque congue. 
+	 				In nec vestibulum metus. Duis hendrerit lobortis massa, in laoreet diam vestibulum eu. 
+	 				Sed et libero dui. Aliquam vestibulum sed massa sit amet tincidunt. 
+	 				Duis bibendum feugiat felis non ullamcorper.. 
+ 				</span>
+ 					<span class="lng lng_en">
+	 				Suspendisse vitae posuere risus, non ultrices purus. Proin sit amet convallis ligula. Ut et metus 
+	 				sollicitudin ligula vestibulum gravida. Praesent mollis tempus rhoncus. Mauris leo sem, 
+	 				volutpat vel velit id, lobortis aliquam dui. In pellentesque elit vel rutrum rhoncus. 
+	 				Donec vel urna quis ligula varius cursus. 
+ 				</span>				
  			</p>
   		</div>
     	<div class="container projects_container">
@@ -85,34 +108,63 @@
     <div class="contact_wrapper container">
      <div class="row">
    	<div class="col-md-6 col-xs-12">
-   			<h2>Contacto</h2>
-      		<p class="contact_info">Rellena el formulario para ponerte en contacto con nosotros o 
-      			suscribirte a nuestra newsletter.</p>
+   			<h2>
+   				<span class="lng lng_es">Contacto</span>
+   				<span class="lng lng_ca">Contacta'ns</span>
+   				<span class="lng lng_en">Get in touch</span>   			
+   			</h2>
+      		<p class="contact_info">
+      			<span class="lng lng_es">
+      				Rellena el formulario para ponerte en contacto con nosotros o suscribirte a nuestra newsletter.
+      			</span>
+      			<span class="lng lng_ca">
+      				Omple el formulari per posar-te en contacte amb nosaltres o subscriure't a la nostra newsletter.
+      			</span>
+      			<span class="lng lng_en">
+      				Fill in the form to contact us or to subscribe to our newsletter.
+      			</span>
+      		</p>
 	  			<div class="form-group">
 					<div class="custom-control custom-checkbox" id="check_subscription">
   						<input type="checkbox" class="custom-control-input">
-  						<label class="custom-control-label" for="customCheck1">Suscribirse a la newsletter</label>
+  						<label class="custom-control-label" for="customCheck1">
+  						<span class="lng lng_es">Suscribirse a la newsletter</span>
+  						<span class="lng lng_ca">Subscriure a la newsletter</span>
+  						<span class="lng lng_en">Subscribe to the newsletter</span>
+  						</label>
 					</div>
    			</div>
    			<div class="contact_result result_ok bg-success">
 					<span class="btn_lbl btn_lbl_send">
-						Mensaje recibido! te responderemos lo antes posible. Gracias.
+						<span class="lng lng_es">Mensaje recibido! te responderemos lo antes posible. Gracias.</span>
+						<span class="lng lng_ca">Missatge rebut! te responderemos lo antes posible. Gràcies.</span>
+						<span class="lng lng_en">Mensaje recibido! te responderemos lo antes posible. Thanks.</span>
 					</span>	
 					<span class="btn_lbl btn_lbl_subscribe hidden">
-						Suscripción a newsletter realizada. Gracias.
+						<span class="lng lng_es">Suscripción a newsletter realizada. Gracias.</span>
+						<span class="lng lng_ca">Suscripción a newsletter realizada. Gracias.</span>
+						<span class="lng lng_en">Suscripción a newsletter realizada. Gracias.</span>
 					</span>	
 				</div>
 				<div class="contact_result bg-warning error_empty">
-					Se deben rellenar todos los campos del formulario.
+					<span class="lng lng_es">Se deben rellenar todos los campos del formulario.</span>
+					<span class="lng lng_ca">Se deben rellenar todos los campos del formulario.</span>
+					<span class="lng lng_en">Se deben rellenar todos los campos del formulario.</span>					
 				</div>
 				<div class="contact_result bg-warning error_email">
-					Parece que el email no es correcto.
+					<span class="lng lng_es">Parece que el email no es correcto.</span>
+					<span class="lng lng_ca">Parece que el email no es correcto.</span>
+					<span class="lng lng_en">Parece que el email no es correcto.</span>
 				</div>  		
 				<div class="contact_result bg-warning error_remail">
-					Los emails no coinciden.
+					<span class="lng lng_es">Los emails no coinciden.</span>
+					<span class="lng lng_ca">Los emails no coinciden.</span>
+					<span class="lng lng_en">Los emails no coinciden.</span>
 				</div>  		
 				<div class="contact_result error_server bg-danger">
-					Se ha producido un error inesperado, por favor inténtalo de nuevo.
+					<span class="lng lng_es">Se ha producido un error inesperado, por favor inténtalo de nuevo.</span>
+					<span class="lng lng_ca">Se ha producido un error inesperado, por favor inténtalo de nuevo.</span>
+					<span class="lng lng_en">Se ha producido un error inesperado, por favor inténtalo de nuevo.</span>
 				</div>  	
 				<div class="loading sending text-left hidden"><div class="lds-facebook"><div></div><div></div><div></div></div></div>	
    	</div>
@@ -120,19 +172,37 @@
    	     <form id="contact_form" autocomplete="on">
    	     	  	<div class="form-group">
 		  				<input type="text" class="form-control position-static" id="contact_name"  
-    						placeholder="nombre" autocomplete="on">
+    						placeholder="" 
+    						placeholder_es="nombre" placeholder_ca="nom" placeholder_en="name" 
+    						autocomplete="on">
 	  					<input type="email" class="form-control position-static" id="contact_email"  
-    						placeholder="email" autocomplete="on">
+    						placeholder="" 
+    						placeholder_es="email" placeholder_ca="email" placeholder_en="email"     						
+    						autocomplete="on">
     					<input type="email" class="form-control position-static" id="contact_remail" 
-    						placeholder="reescribir email" autocomplete="on">
+    						placeholder="" 
+    						placeholder_es="reescribir email" placeholder_ca="reescriu email" placeholder_en="retype email" 
+    						autocomplete="on">
     					<input type="text" class="form-control position-static" id="contact_comment" 
-    						placeholder="comentario" autocomplete="on">	
+    						placeholder="" 
+    						placeholder_es="comentario" placeholder_ca="comentari" placeholder_en="comment" 
+    						autocomplete="on">	
     					<textarea class="form-control position-static no_subscription" id="contact_message" rows="3" 
-    						placeholder="mensaje"></textarea>
+    						placeholder=""
+							placeholder_es="mensaje" placeholder_ca="missatge" placeholder_en="message"     						
+    						></textarea>
   					</div>
  					<button id="btn_contact" type="submit" class="btn btn-info float-right">
-  							<span class="btn_lbl btn_lbl_send">Enviar mensaje</span>
-  							<span class="btn_lbl btn_lbl_subscribe hidden">Suscribirse</span>
+  							<span class="btn_lbl btn_lbl_send">
+  								<span class="lng lng_es">Enviar mensaje</span>
+  								<span class="lng lng_ca">Enviar missatge</span>
+  								<span class="lng lng_en">Send message</span>
+  							</span>
+  							<span class="btn_lbl btn_lbl_subscribe hidden">
+  								<span class="lng lng_es">Suscribirse</span>
+  								<span class="lng lng_es">Subscriure</span>
+  								<span class="lng lng_es">Subscribe</span>
+  							</span>
   					</button>
 	 	 		</form>
 			</div>
@@ -141,7 +211,15 @@
 	</div>
 
    <div class="cookies_msg">
-		<p>Esta web utiliza cookies para obtener estadísticas de navegación. Si estás de acuerdo pulsa 
+		<p class="lng lng_es">Esta web utiliza cookies para obtener estadísticas de navegación. Si estás de acuerdo pulsa 
+		<a class="cookies_accept" href="#">Aceptar</a><br/>Obtén información sobre las cookies   
+		<a target="_new" href="https://support.mozilla.org/es/kb/cookies-informacion-que-los-sitios-web-guardan-en-">aquí</a>.
+		</p>   
+		<p class="lng lng_ca">Aquesta web fa servir cookies per obtenir estadístiques de navegació. Si estás de acuerdo pulsa 
+		<a class="cookies_accept" href="#">Aceptar</a><br/>Obtén información sobre las cookies   
+		<a target="_new" href="https://support.mozilla.org/es/kb/cookies-informacion-que-los-sitios-web-guardan-en-">aquí</a>.
+		</p>   
+		<p class="lng lng_en">This web uses cookies to get para obtener estadísticas de navegación. Si estás de acuerdo pulsa 
 		<a class="cookies_accept" href="#">Aceptar</a><br/>Obtén información sobre las cookies   
 		<a target="_new" href="https://support.mozilla.org/es/kb/cookies-informacion-que-los-sitios-web-guardan-en-">aquí</a>.
 		</p>   
@@ -153,11 +231,13 @@
 
 	<div id="dummy" class="hidden">
 	 	<div class="project_item col-md-3">
+		 	<div class="project_data_border"></div>
       	<a class="project_link" href="#">
          	<img src=""/>
             <h2 class="project_data_title"></h2>
          </a>
-         <p class="project_data_author small"></p>
+         <div class="project_data_date"></div>
+         <div class="project_data_place"></div>
          <p class="project_data_info"></p> 
     	</div>    	
 	</div>
