--- a/nav.html
+++ b/nav.html
@@ -1,5 +1,12 @@
  <nav class="navbar fixed-top navbar-expand-lg">
-    <a class="navbar-brand" href="."><img src="img/mesh_logo_white.svg" alt="mesh logo"></a>
+    <div class="navbar-brand" href=".">
+    	<h1><b>DSI</b>PLAY</h1>
+    	<h2>
+    		<span class="lng lng_es">Ciclo de experiencias de Innovación Social Digital en Barcelona</span>
+		   <span class="lng lng_ca">Cicle d'experiències d'Innovació Social Digital a Barcelona</span>
+		   <span class="lng lng_en">Cicle of Social Digital Innovation experiences at Barcelona</span>
+    	</h2>
+    </div>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-items" aria-controls="navbar-items" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -7,22 +14,38 @@
     <div class="collapse navbar-collapse justify-content-end" id="navbar-items">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="index.html#home">Inicio</a>
-        </li>
-        <!--<li class="nav-item">
-          <a class="nav-link" href="about.html">Acerca de MESH</a>
-        </li>-->
-        <li class="nav-item">
-          <a class="nav-link" href="index.html#events">Eventos</a>
+          <a class="nav-link" href="index.html#home">
+          	<span class="lng lng_es">Inicio</span>
+          	<span class="lng lng_ca">Inici</span>
+          	<span class="lng lng_en">Home</span>
+          </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="index.html#calendar">Calendario</a>
+          <a class="nav-link" href="index.html#events">
+          	<span class="lng lng_es">Eventos</span>
+          	<span class="lng lng_ca">Events</span>
+          	<span class="lng lng_en">Events</span>            
+          </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="index.html#media">Press Media</a>
+          <a class="nav-link" href="index.html#media">
+          	<span class="lng lng_es">Media</span>
+          	<span class="lng lng_ca">Media</span>
+          	<span class="lng lng_en">Media</span>          
+          </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="index.html#contact">Contacto</a>
+          <a class="nav-link" href="index.html#contact">
+          	<span class="lng lng_es">Contacto</span>
+          	<span class="lng lng_ca">Contacte</span>
+          	<span class="lng lng_en">Contact</span>          
+          </a>
+        </li>
+
+        <li class="nav-item nav_lng">
+          <a class="nav-link" aria-lang="ca" href="#">CAT</a>/
+          <a class="nav-link" aria-lang="es" href="#">CAST</a>/
+          <a class="nav-link" aria-lang="en" href="#">ENG</a>
         </li>
       </ul>
     </div>
